# invest_notificator

./: README.md  docker-compose.yml
api_market/: pyproject.toml
api_market/app/: config.py  factory_method.py  main.py
api_market/app/api/: model.py  resource.py  schemas.py
api_market/app/core/: alchemy.py
api_market/migrations/versions/: 23ba16fe59ed_initital.py
