[tool.poetry]
name = "api_market"
version = "0.1.0"
description = ""
authors = ["saneklyu <saneklyu@mts.ru>"]

[tool.poetry.dependencies]
python = "3.8.6"
SQLAlchemy = "^1.3.23"
Flask-SQLAlchemy = "^2.4.4"
cached-property = "^1.5.2"
Flask-RESTful = "^0.3.8"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
Flask-Migrate = "^2.6.0"
SQLAlchemy-Utils = "^0.36.8"
betterconf = "^2.6.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "0.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
